--- a/_materialDeAula/24-01-30.md
+++ b/_materialDeAula/24-01-30.md
@@ -1,8 +1,23 @@
 # Testes unitários
 
-documentação do vitest: https://vitest.dev/guide/ 
+####  ✨ O teste unitário nada mais é do que **o teste da menor parte testável** de um programa.  ✨
+O teste unitário uma forma menos custiosa de contribuir para a qualidade e manutenção do software. Existem diferentes formas de testar, tais como rodar o código para verificar o comportamento esperado ou pedir para outras pessoas utilizarem. No entanto, **quem garante que após alguma atualização o que estava funcionando continuará?**
 
-## Instalando o Vitest
+E é ai que o teste unitário entrega um dos seus principais valores, ele garante que sua aplicação continue funcionando após alterações na sua base de código. Caso alguma mudança impacte na funcionalidade o teste acusará e você como pessoa desenvolvedora poderá analisar o melhor caminho.
+
+Como bem justificado por [Dayvson Lima](https://dayvsonlima.medium.com/entenda-de-uma-vez-por-todas-o-que-s%C3%A3o-testes-unit%C3%A1rios-para-que-servem-e-como-faz%C3%AA-los-2a6f645bab3) em seu artigo: 
+> Pode parecer tentador em um primeiro momento não escrever testes para uma função que você acaba de desenvolver, afinal, costuma-se escrever mais código para testar uma função, que o próprio código da função. Mas você deve lembrar que irá passar a maior parte do tempo de desenvolvimento de um sistema trabalhando em sua manutenção.
+Sua aplicação em pouco tempo terá algumas centenas de funções sendo executadas, e em muitas vezes executando umas às outras, sua base de código fica enorme e logo torna-se humanamente impossível de ser testada de forma manual após qualquer alteração. Testes unitários na maioria das vezes levam apenas alguns segundos para testar toda sua aplicação.
+
+### Piramide de testes
+
+![image](https://github.com/lisandrascruz/ReactJS-PretaLab-Santander/assets/7760933/3f5ad4a3-3d31-4037-8b55-71f01e598a5f)
+
+A pirâmide de testes é um conceito desenvolvido por Mike Cohn que diz que defende que ter deve-se ter muito mais testes unitários do que testes de interface. O Conceito da pirâmide explica o quanto testes de interface são custosos em relação a testes unitários, pois eles demoram são de dificil manutenção e levam **muito mais tempo** para serem executados, enquanto os testes unitários são muito mais simples, rápidos e baratos.
+
+
+### Instalando o Vitest
+documentação do vitest: https://vitest.dev/guide/ 
 
 1. Verifique a versão do seu Node, ela deve ser maior que ou igual a versão 18.
 2. Adicione o compando de test no seu `package.json`
