--- a/_materialDeAula/24-01-30.md
+++ b/_materialDeAula/24-01-30.md
@@ -11,7 +11,7 @@ Sua aplicação em pouco tempo terá algumas centenas de funções sendo executa
 
 ### Piramide de testes
 
-![image](https://github.com/lisandrascruz/ReactJS-PretaLab-Santander/assets/7760933/3f5ad4a3-3d31-4037-8b55-71f01e598a5f)
+<img src='https://github.com/lisandrascruz/ReactJS-PretaLab-Santander/assets/7760933/3f5ad4a3-3d31-4037-8b55-71f01e598a5f' width='400px'>
 
 A pirâmide de testes é um conceito desenvolvido por Mike Cohn que diz que defende que ter deve-se ter muito mais testes unitários do que testes de interface. O Conceito da pirâmide explica o quanto testes de interface são custosos em relação a testes unitários, pois eles demoram são de dificil manutenção e levam **muito mais tempo** para serem executados, enquanto os testes unitários são muito mais simples, rápidos e baratos.
 
@@ -64,3 +64,14 @@ documentação do vitest: https://vitest.dev/guide/
       },
     });
    ```
+
+
+### Test-Driven Development (TDD)
+
+<img src='https://github.com/lisandrascruz/ReactJS-PretaLab-Santander/assets/7760933/cb00a734-d865-4d41-b52d-a3f42226662e' width='500px'>
+
+<img src='https://github.com/lisandrascruz/ReactJS-PretaLab-Santander/assets/7760933/63daa1ab-494a-4a5e-9d9c-eccdca56ba29' width='300px'>
+
+É uma prática de desenvolvimento de software que envolve **escrever testes automatizados antes de implementar o código**. O ciclo típico consiste em criar um teste, verificar sua falha (já que a funcionalidade ainda não está implementada) e, em seguida, escrever o código mínimo necessário para que o teste passe. 
+
+
