--- a/_materialDeAula/24-01-30.md
+++ b/_materialDeAula/24-01-30.md
@@ -20,7 +20,8 @@ A pirâmide de testes é um conceito desenvolvido por Mike Cohn que diz que defe
 documentação do vitest: https://vitest.dev/guide/ 
 
 1. Verifique a versão do seu Node, ela deve ser maior que ou igual a versão 18.
-2. Adicione o compando de test no seu `package.json`
+2. Instale o vitest ```npm install -D vitest```
+3. Adicione o compando de test no seu `package.json`
   
     ```javascript
       "scripts": {
